<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formulario_cotacao_Equipamentos_Portateis">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".formulario_cotacao_Seguro_Residencial">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Formulario_cotacao_Seguro_Viagem">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Formulario_cotacao_Equipamentos_Portateis">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="368dp"
                    android:layout_height="109dp"
                    android:layout_marginBottom="256dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.481"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints">

                    <Button
                        android:id="@+id/btnEmpresarial"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@mipmap/ic_launcher_empresarial"
                        android:onClick="telaempresarial"
                        android:paddingTop="70dp"
                        android:text="@string/btnEmpresarial"
                        android:textColor="@android:color/black"
                        android:textColorLink="@android:color/holo_blue_dark" />

                    <Button
                        android:id="@+id/btnResidencial"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@mipmap/ic_launcher_residencial"
                        android:onClick="telaresidencial"
                        android:paddingTop="70dp"
                        android:text="@string/btnResidencial"
                        android:textColor="@android:color/black"
                        android:textColorLink="@android:color/holo_blue_dark" />

                    <Button
                        android:id="@+id/btnViagem"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@mipmap/ic_launcher_travel"
                        android:onClick="telaviagem"
                        android:paddingTop="70dp"
                        android:text="@string/btnViagem"
                        android:textColor="@android:color/black"
                        android:textColorLink="@android:color/holo_blue_dark" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/txtViewPortateis"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="368dp"
                    android:layout_height="109dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.481"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintVertical_bias="1.0">

                    <Button
                        android:id="@+id/btnPrinci"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="telaprinci"
                        android:text="@string/btnPrinci"
                        android:textColor="@android:color/black"
                        android:textColorLink="@android:color/holo_blue_dark" />

                    <Button
                        android:id="@+id/btnAuto"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@mipmap/ic_launcher_foreground"
                        android:drawablePadding="0dp"
                        android:gravity="center_vertical|center_horizontal|center"
                        android:onClick="telaauto"
                        android:paddingTop="50dp"
                        android:text="@string/btnAuto"
                        android:textColor="@android:color/black"
                        android:textColorLink="@android:color/holo_blue_dark" />

                    <Button
                        android:id="@+id/btnPortateis"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@mipmap/ic_launcher_portateis"
                        android:paddingTop="70dp"
                        android:text="@string/btnPortateis"
                        android:textColor="@android:color/black"
                        android:textColorLink="@android:color/holo_blue_dark" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>